[package]
name = "ruvoke"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Victor Garcia Fernandez"]
description = "Application runner made in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freedesktop_entry_parser = "1.3.0"
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
